--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "headers": [
         {
-            "source": "/api/.*",
+            "source": "/api/timestamp",
             "headers": [
                 { "key": "Cache-Control", "value": "no-store" }
             ]
